--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -125,7 +125,7 @@ collections:
           - { label: Name, name: name, widget: string }
           - { label: 'Description', name: 'description', widget: 'string' }
           - { label: Price, name: price, widget: number }
-          - label: Category:
+          - label: Category
             name: category
             widget: select
             options: ['standard', 'exterior', 'interior', 'window', 'accessory', 'color']
