--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -123,7 +123,7 @@ collections:
           widget: list
           fields:
           - { label: Name, name: name, widget: string }
-          - { label: 'Description', name: 'description', widget: 'string' }
+          - { label: 'Description', name: 'description', widget: 'string', required: false }
           - { label: Price, name: price, widget: number }
           - label: Category
             name: category
@@ -161,7 +161,12 @@ collections:
           widget: list
           fields:
           - { label: Name, name: name, widget: string }
+          - { label: 'Description', name: 'description', widget: 'string', required: false }
           - { label: Price, name: price, widget: number }
+          - label: Category
+            name: category
+            widget: select
+            options: ['standard', 'exterior', 'interior', 'window', 'accessory', 'color']
         - label: Gallery
           name: gallery
           widget: list
@@ -194,7 +199,12 @@ collections:
           widget: list
           fields:
           - { label: Name, name: name, widget: string }
+          - { label: 'Description', name: 'description', widget: 'string', required: false }
           - { label: Price, name: price, widget: number }
+          - label: Category
+            name: category
+            widget: select
+            options: ['standard', 'exterior', 'interior', 'window', 'accessory', 'color']
         - label: Gallery
           name: gallery
           widget: list
@@ -227,7 +237,12 @@ collections:
           widget: list
           fields:
           - { label: Name, name: name, widget: string }
+          - { label: 'Description', name: 'description', widget: 'string', required: false }
           - { label: Price, name: price, widget: number }
+          - label: Category
+            name: category
+            widget: select
+            options: ['standard', 'exterior', 'interior', 'window', 'accessory', 'color']
         - label: Gallery
           name: gallery
           widget: list
@@ -260,7 +275,12 @@ collections:
           widget: list
           fields:
           - { label: Name, name: name, widget: string }
+          - { label: 'Description', name: 'description', widget: 'string', required: false }
           - { label: Price, name: price, widget: number }
+          - label: Category
+            name: category
+            widget: select
+            options: ['standard', 'exterior', 'interior', 'window', 'accessory', 'color']
         - label: Gallery
           name: gallery
           widget: list
@@ -296,7 +316,12 @@ collections:
           widget: list
           fields:
           - { label: Name, name: name, widget: string }
+          - { label: 'Description', name: 'description', widget: 'string', required: false }
           - { label: Price, name: price, widget: number }
+          - label: Category
+            name: category
+            widget: select
+            options: ['standard', 'exterior', 'interior', 'window', 'accessory', 'color']
         - label: Gallery
           name: gallery
           widget: list
@@ -329,7 +354,12 @@ collections:
           widget: list
           fields:
           - { label: Name, name: name, widget: string }
+          - { label: 'Description', name: 'description', widget: 'string', required: false }
           - { label: Price, name: price, widget: number }
+          - label: Category
+            name: category
+            widget: select
+            options: ['standard', 'exterior', 'interior', 'window', 'accessory', 'color']
         - label: Gallery
           name: gallery
           widget: list
@@ -362,7 +392,12 @@ collections:
           widget: list
           fields:
           - { label: Name, name: name, widget: string }
+          - { label: 'Description', name: 'description', widget: 'string', required: false }
           - { label: Price, name: price, widget: number }
+          - label: Category
+            name: category
+            widget: select
+            options: ['standard', 'exterior', 'interior', 'window', 'accessory', 'color']
         - label: Gallery
           name: gallery
           widget: list
@@ -398,7 +433,12 @@ collections:
           widget: list
           fields:
           - { label: Name, name: name, widget: string }
+          - { label: 'Description', name: 'description', widget: 'string', required: false }
           - { label: Price, name: price, widget: number }
+          - label: Category
+            name: category
+            widget: select
+            options: ['standard', 'exterior', 'interior', 'window', 'accessory', 'color']
         - label: Gallery
           name: gallery
           widget: list
@@ -431,7 +471,12 @@ collections:
           widget: list
           fields:
           - { label: Name, name: name, widget: string }
+          - { label: 'Description', name: 'description', widget: 'string', required: false }
           - { label: Price, name: price, widget: number }
+          - label: Category
+            name: category
+            widget: select
+            options: ['standard', 'exterior', 'interior', 'window', 'accessory', 'color']
         - label: Gallery
           name: gallery
           widget: list
