--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -406,9 +406,47 @@ collections:
   - label: Chassis Mount Campers
     name: chassiscampers
     files:
-    - label: 'Grand Mesa'
+    - label: "8'"
       name: 'chassisshort'
       file: 'src/content/campers/chassis/short.md'
+      extension: md
+      fields:
+        - { label: 'Name', name: 'name', widget: 'string' }
+        - { label: 'Short Description', name: 'short_description', widget: 'string' }
+        - { label: 'Description', name: 'description', widget: 'string' }
+        - { label: 'Photo', name: 'photo', widget: 'image' }
+        - { label: 'Shell Price', name: 'shell_price', widget: 'number' }
+        - { label: 'Lead Time (# of weeks)', name: 'lead_time_weeks', widget: 'number' }
+        - label: Features
+          name: features
+          widget: list
+          fields:
+          - { label: Name, name: name, widget: string }
+        - label: Specifications
+          name: specs
+          widget: list
+          fields:
+          - { label: Name, name: name, widget: string }
+          - { label: Value, name: value, widget: string }
+        - label: Options
+          name: options
+          widget: list
+          fields:
+          - { label: Name, name: name, widget: string }
+          - { label: 'Description', name: 'description', widget: 'string', required: false }
+          - { label: Price, name: price, widget: number }
+          - label: Category
+            name: category
+            widget: select
+            options: ['standard', 'exterior', 'interior', 'window', 'accessory', 'color']
+        - label: Gallery
+          name: gallery
+          widget: list
+          fields:
+          - { label: Image, name: image, widget: image }
+    - label: 'Grand Mesa'
+      name: 'chassismed'
+      file: 'src/content/campers/chassis/med.md'
       extension: md
       fields:
         - { label: 'Name', name: 'name', widget: 'string' }
