--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -260,7 +260,7 @@ collections:
   - label: Chassis Mount Campers
     name: chassiscampers
     files:
-    - label: "8'"
+    - label: "Sunkat"
       name: 'chassisshort'
       file: 'src/content/campers/chassis/short.md'
       extension: md
